--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,12 @@
 </head>
 
 <body>
-    <h3>Please enter Journal entry</h3>
-    <form id="triangle-checker-form">
-        <label for="length1">Enter a number:</label>
-        <input id="length1" type="number">
-        <label for="length2">Enter a number:</label>
-        <input id="length2" type="number">
-        <label for="length3">Enter a number:</label>
-        <input id="length3" type="number">
+    <h3>Journal Entry Submitter</h3>
+    <form id="entry-form">
+        <label for="title">Title for journal entry: </label>
+        <input id="title" type="text">
+        <label for="journal-body">Journal entry: </label>
+        <input id="journal-body" type="text">
         <button type="submit">Submit</button>
     </form>
     <div id="response"></div>
