--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
         <button type="submit">Submit</button>
     </form>
     <div id="response"></div>
+    <div id="entries"></div>
+    <div id="showWhole"></div>
 </body>
 
 </html>
