added comments to make text box bigger another time
Co-authored-by: Henry Oberholtzer <henryoberholtzer@gmail.com>
Co-authored-by: Gabriel Tucker <gabrieltucker260@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
         <label for="title">Title for journal entry: </label>
         <input id="title" type="text">
         <label for="journal-body">Journal entry: </label>
-        <input id="journal-body" type="text">
+        <input type="text" id="journal-body">
+        <!-- <textarea id="journal-body" type="text" name="journal-body" rows="10" cols="5"></textarea> -->
         <button type="submit">Submit</button>
     </form>
     <div id="response"></div>
